--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
     <div class="container d-flex flex-column text-center p-5">
         <a href="./">Main</a>
         <h2>Период заморозков.</h2>
-        <p>Находим макисмально продолжительное значение минусовых температур за 90 дней зимы.</p>
+        <p>Находим макисмально продолжительное количество дней с минусовыми температурами за 90 дней зимы.</p>
     </div>
 </body>
 </html>
