--- a/1.html
+++ b/1.html
@@ -12,9 +12,21 @@
 </head>
 <body>
     <div class="container d-flex flex-column text-center p-5">
-        <a href="./">Main</a>
-        <h2>UkrAvtoDorDays.</h2>
-        <p>Число дней, когда за период 30 дней температура от 0 и выше опускается ниже 0.</p>
+        <header class="flex-grow-1"></header>
+        <main>
+            <a href="./">Main</a>
+            <h2>UkrAvtoDorDays.</h2>
+            <p>Число дней, когда за период 90 дней температура от 0 и выше опускается ниже 0.</p>
+            <div class="row text-center mt-3">
+                <div>Температуры за 90 дней зимы</div>
+                <div>-48, -46, 48, 27, -20, -35, 43, 4, 9, 10, 41, -46, -4, 0, -38, -49, 25, -46, -48, -23, -25, -22, 12, 38, 19, -20, 26, 4, 19, 23, 26, -41, 4, -13, -9, -11, -7, 38, 27, 41, 14, -35, -38, -44, -44, -22, -24, 29, -32, 41, 7, -25, 3, 27, -45, 10, 48, 8, -34, -49, 17, -16, 41, -11, -50, -6, -34, 20, 14, -18, 39, -28, -33, -27, -48, 40, -37, -44, 0, 46, 36, -34, -50, 8, -3, 26, 40, 10, -36, 24.
+                </div>
+                <p>
+                <a onclick="calc()" class="btn btn-primary m-2 p-2" href="#" role="button">Расчет: <output id="result"></output> UkrAvtoDorDays</a>
+                </p>
+            </div>
+        </main>
+        <footer class="flex-grow-1"></footer>
     </div> 
 </body>
 </html>
